KAN-3 authorization logic